adding pages adn and invertir en afrique

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 
     <header
       id="main-header"
-      class="fixed w-full top-0 z-40 bg-white/90 backdrop-blur-xl border-b border-transparent h-28 flex items-center"
+      class="fixed w-full top-0 z-20 bg-white/90 backdrop-blur-xl border-b border-transparent h-28 flex items-center"
     >
       <div class="max-w-7xl mx-auto w-full px-6 lg:px-8">
         <div class="flex justify-between items-center w-full">
@@ -1622,11 +1622,11 @@
                 ></path>
               </svg>
               <span class="text-2xl font-light"
-                >contact@toledoconsulting.ma</span
+                >manager@toledoconsulting.ma</span
               >
             </a>
             <a
-              href="https://wa.me/212661000000"
+              href="https://wa.me/212663836039"
               class="group p-12 border-2 border-white/10 hover:bg-white/5 hover:border-green-500/50 transition-all rounded-2xl flex flex-col items-center justify-center gap-8 hover-lift"
             >
               <svg
@@ -1658,7 +1658,7 @@
             id="t-footer-copy"
             class="text-slate-500 text-[11px] uppercase tracking-[0.25em] font-black"
           >
-            © 2025 Toledo Consulting
+            © 2026 Toledo Consulting
           </p>
           <p
             id="t-footer-tag"
@@ -1855,9 +1855,9 @@
           "t-footer-tag": "Market Intelligence & Pan-African Excellence",
           // Nav
           "t-nav-dna": "DNA",
-          "t-nav-invest": "Invest",
+          "t-nav-invest": "Afrique invest",
           "t-nav-studies": "Studies",
-          "t-nav-exec": "Study Tour",
+          "t-nav-exec": "Executive Study Tour",
           "t-nav-edu": "Education",
           "t-nav-form": "Training",
           "t-nav-contact": "Contact Us",
