--- a/adn.html
+++ b/adn.html
@@ -523,11 +523,12 @@
       <div class="max-w-7xl mx-auto w-full px-6 lg:px-8">
         <div class="flex justify-between items-center w-full">
           <a href="#" class="group flex-shrink-70">
-            <span
+            <!-- <span
               class="text-3xl font-black tracking-tighter text-toledo-blue group-hover:text-blue-700 transition-all duration-300"
               >TOLEDO
               <span class="text-blue-600 font-light">CONSULTING</span></span
-            >
+            > -->
+            <img src="./TOLEDO-consulting.png" alt="" width="50%">
           </a>
 
           <nav class="hidden xl:flex space-x-10 items-center">
