update the preloader2

--- a/education.html
+++ b/education.html
@@ -377,7 +377,7 @@
       <section id="hero" class="relative flex items-center bg-toledo-blue overflow-hidden" style="height: 70vh; min-height: 500px">
         <div class="absolute inset-0 z-0">
           <video autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover">
-            <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4" />
+            <source src="./video.mp4" type="video/mp4" />
           </video>
           <div class="video-overlay"></div>
         </div>
