--- a/investir_en_afrique.html
+++ b/investir_en_afrique.html
@@ -638,7 +638,7 @@
             style="width: 100%; height: 100%; object-fit: cover"
           >
             <source
-              src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"
+              src="./video.mp4"
               type="video/mp4"
             />
           </video>
