update the preloader3

--- a/adn.html
+++ b/adn.html
@@ -931,7 +931,7 @@
 
         <div class="max-w-7xl mx-auto px-6 lg:px-8">
           <!-- Section Header -->
-          <div class="text-center mb-20">
+          <div class="text mb-20">
             <span
               id="t-expertises-badge"
               class="inline-block text-blue-600 text-[11px] font-black uppercase tracking-[0.3em] bg-blue-50 px-4 py-2 rounded-full mb-6"
@@ -957,7 +957,7 @@
               Créateur de Croissance
             </h3>
             <p
-              class="text-slate-600 font-light text-lg leading-relaxed max-w-2xl mx-auto"
+              class="text-slate-600 font-light text-lg leading-relaxed  mx-auto"
             >
               C’est dans cet esprit qu’est né en 2024 Toledo Consulting. Notre
               mission est d'offrir des solutions
