--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>
       Investir en Afrique : Conseil & Accompagnement | Toledo Consulting
     </title>
+    <link rel="icon" href="./TOLEDO-consulting.png">
     <meta
       name="description"
       content="Toledo Consulting : 24 ans d'engagement pour sécuriser votre expansion en Afrique. Expertise B2B en intelligence de marché, accréditation CAMES et ingénierie de formation."
