--- a/est.html
+++ b/est.html
@@ -515,6 +515,17 @@
               onclick="window.location.href = 'index.html'"
             />
 
+            
+             <a
+              href="./index.html"
+              class="nav-link text-[10px] font-black uppercase tracking-[0.15em] text-slate-500 hover:text-blue-600 transition-all duration-300 relative group"
+            >
+              <span id="t-nav-dna">Accueil</span>
+              <span
+                class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-600 group-hover:w-full transition-all duration-300"
+              ></span>
+            </a>
+
             <!-- Link: ADN -->
             <a
               href="./adn.html"
